Changelog
=========

1.4 - Unreleased
----------------


1.3 - Released April 23, 2010
-----------------------------

* Add support for multiple image fields on the same object and use sessions
  to store editing data like the undo stack etc.
  [witsch]

* Clear undo stack on invocation to avoid stale images after an update and
  prepare multi-field support.
  [witsch]

* Fix style information for missing action icons.
  [witsch]

* Allow invocation of editor directly from Archetypes' image widget.
  [witsch]

* Move the zoom slider into the actions dialog.
  [witsch]

* Closing the main editor dialog also closes the controls and zoom slider.
  [witsch]

* Add buildout and update test setup to use `collective.testcaselayer`.
  [witsch]

1.2 - Released February 15, 2010
--------------------------------

* The save as action now saves to the parent of original image
  instead of to the root of the site.
  [vangheem]

* Clicking the imageeditor tab in IE6/IE7 does not bring up edit dialogs.
  http://plone.org/products/products-imageeditor/issues/4
  [Jeff Kunce]

* added upgrade step for all versions to 1.2.

* Remove unneeded javascript entry in portal_javascripts and updated
  uninstall profile
  [vangheem]

1.2rc3 ~ December 4, 2009
-------------------------
* emergency fix for vocabulary as last fix had a syntax error...
  should have been tested.
  [vangheem]

1.2rc2 ~ December 3, 2009
-------------------------
* fix duplicates when several types have the same content type in
  ImageContentTypeVocabulary, even if they are not installed at the same time
  [Sylvain Boureliou]
* added brazilian translation

1.2rc1
------
* fixed css
* change install profile title

1.2b3
-----
* add user ability to choose image_editor throw portal_memberdata [toutpt]

1.2b2
-----
* add i18n on all actions [toutpt]
* add french translation [toutpt]
* add support for multiple editors [toutpt]
* current editor moved to @@imageeditor.alagimp [toutpt]