@@ -4,6 +4,8 @@ Changelog
 1.4 - Unreleased
 ----------------
 
+* Support per-field undo stacks.
+  [witsch]
 
 1.3 - Released April 23, 2010
 -----------------------------
